src/test/resources/frontendReference/invalid/semanticErr/variables/basicTypeErr11.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 12:13 -- Incompatible type at true (expected: STRING, actual: BOOL)
